errors


videoadjust.c: In function ‘gst_video_balance_set_property’:
videoadjust.c:119:27: warning: implicit declaration of function ‘GST_VIDEO_BALANCE’; did you mean ‘GST_COLOR_BALANCE’? [-Wimplicit-function-declaration]
  119 |   GstVideoBalance *self = GST_VIDEO_BALANCE(g_type_instance_get_private(G_OBJECT(object), gst_video_balance_get_type()));
      |                           ^~~~~~~~~~~~~~~~~
      |                           GST_COLOR_BALANCE
In file included from /usr/include/glib-2.0/gobject/gobject.h:24,
                 from /usr/include/glib-2.0/gobject/gbinding.h:29,
                 from /usr/include/glib-2.0/glib-object.h:22,
                 from /usr/include/gstreamer-1.0/gst/gstenumtypes.h:6,
                 from /usr/include/gstreamer-1.0/gst/gst.h:31,
                 from videoadjust.c:1:
/usr/include/glib-2.0/gobject/gtype.h:2458:6: warning: passing argument 1 of ‘g_type_instance_get_private’ from incompatible pointer type [-Wincompatible-pointer-types]
 2458 |     ((ct*) (void *) g_type_check_instance_cast ((GTypeInstance*) ip, gt))
/usr/include/glib-2.0/gobject/gtype.h:501:66: note: in expansion of macro ‘_G_TYPE_CIC’
  501 | #define G_TYPE_CHECK_INSTANCE_CAST(instance, g_type, c_type)    (_G_TYPE_CIC ((instance), (g_type), c_type))
      |                                                                  ^~~~~~~~~~~
/usr/include/glib-2.0/gobject/gobject.h:52:38: note: in expansion of macro ‘G_TYPE_CHECK_INSTANCE_CAST’
   52 | #define G_OBJECT(object)            (G_TYPE_CHECK_INSTANCE_CAST ((object), G_TYPE_OBJECT, GObject))
      |                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~
videoadjust.c:119:73: note: in expansion of macro ‘G_OBJECT’
  119 |   GstVideoBalance *self = GST_VIDEO_BALANCE(g_type_instance_get_private(G_OBJECT(object), gst_video_balance_get_type()));
      |                                                                         ^~~~~~~~
/usr/include/glib-2.0/gobject/gtype.h:1352:70: note: expected ‘GTypeInstance *’ {aka ‘struct _GTypeInstance *’} but argument is of type ‘GObject *’ {aka ‘struct _GObject *’}
 1352 | gpointer g_type_instance_get_private    (GTypeInstance              *instance,
      |                                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
videoadjust.c:119:27: warning: initialization of ‘GstVideoBalance *’ {aka ‘struct _GstVideoBalance *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  119 |   GstVideoBalance *self = GST_VIDEO_BALANCE(g_type_instance_get_private(G_OBJECT(object), gst_video_balance_get_type()));
      |                           ^~~~~~~~~~~~~~~~~
In file included from /usr/include/glib-2.0/gobject/gobject.h:24,
                 from /usr/include/glib-2.0/gobject/gbinding.h:29,
                 from /usr/include/glib-2.0/glib-object.h:22,
                 from /usr/include/gstreamer-1.0/gst/gstenumtypes.h:6,
                 from /usr/include/gstreamer-1.0/gst/gst.h:31,
                 from videoadjust.c:1:
videoadjust.c: In function ‘gst_video_balance_get_property’:
/usr/include/glib-2.0/gobject/gtype.h:2458:6: warning: passing argument 1 of ‘g_type_instance_get_private’ from incompatible pointer type [-Wincompatible-pointer-types]
 2458 |     ((ct*) (void *) g_type_check_instance_cast ((GTypeInstance*) ip, gt))
/usr/include/glib-2.0/gobject/gtype.h:501:66: note: in expansion of macro ‘_G_TYPE_CIC’
  501 | #define G_TYPE_CHECK_INSTANCE_CAST(instance, g_type, c_type)    (_G_TYPE_CIC ((instance), (g_type), c_type))
      |                                                                  ^~~~~~~~~~~
/usr/include/glib-2.0/gobject/gobject.h:52:38: note: in expansion of macro ‘G_TYPE_CHECK_INSTANCE_CAST’
   52 | #define G_OBJECT(object)            (G_TYPE_CHECK_INSTANCE_CAST ((object), G_TYPE_OBJECT, GObject))
      |                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~
videoadjust.c:159:73: note: in expansion of macro ‘G_OBJECT’
  159 |   GstVideoBalance *self = GST_VIDEO_BALANCE(g_type_instance_get_private(G_OBJECT(object), gst_video_balance_get_type()));
      |                                                                         ^~~~~~~~
/usr/include/glib-2.0/gobject/gtype.h:1352:70: note: expected ‘GTypeInstance *’ {aka ‘struct _GTypeInstance *’} but argument is of type ‘GObject *’ {aka ‘struct _GObject *’}
 1352 | gpointer g_type_instance_get_private    (GTypeInstance              *instance,
      |                                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
videoadjust.c:159:27: warning: initialization of ‘GstVideoBalance *’ {aka ‘struct _GstVideoBalance *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  159 |   GstVideoBalance *self = GST_VIDEO_BALANCE(g_type_instance_get_private(G_OBJECT(object), gst_video_balance_get_type()));
      |                           ^~~~~~~~~~~~~~~~~
In file included from /usr/include/glib-2.0/gobject/gobject.h:24,
                 from /usr/include/glib-2.0/gobject/gbinding.h:29,
                 from /usr/include/glib-2.0/glib-object.h:22,
                 from /usr/include/gstreamer-1.0/gst/gstenumtypes.h:6,
                 from /usr/include/gstreamer-1.0/gst/gst.h:31,
                 from videoadjust.c:1:
videoadjust.c: In function ‘gst_video_balance_transform_ip’:
/usr/include/glib-2.0/gobject/gtype.h:2458:6: warning: passing argument 1 of ‘g_type_instance_get_private’ from incompatible pointer type [-Wincompatible-pointer-types]
 2458 |     ((ct*) (void *) g_type_check_instance_cast ((GTypeInstance*) ip, gt))
/usr/include/glib-2.0/gobject/gtype.h:501:66: note: in expansion of macro ‘_G_TYPE_CIC’
  501 | #define G_TYPE_CHECK_INSTANCE_CAST(instance, g_type, c_type)    (_G_TYPE_CIC ((instance), (g_type), c_type))
      |                                                                  ^~~~~~~~~~~
/usr/include/glib-2.0/gobject/gobject.h:52:38: note: in expansion of macro ‘G_TYPE_CHECK_INSTANCE_CAST’
   52 | #define G_OBJECT(object)            (G_TYPE_CHECK_INSTANCE_CAST ((object), G_TYPE_OBJECT, GObject))
      |                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~
videoadjust.c:199:73: note: in expansion of macro ‘G_OBJECT’
  199 |   GstVideoBalance *self = GST_VIDEO_BALANCE(g_type_instance_get_private(G_OBJECT(trans), gst_video_balance_get_type()));
      |                                                                         ^~~~~~~~
/usr/include/glib-2.0/gobject/gtype.h:1352:70: note: expected ‘GTypeInstance *’ {aka ‘struct _GTypeInstance *’} but argument is of type ‘GObject *’ {aka ‘struct _GObject *’}
 1352 | gpointer g_type_instance_get_private    (GTypeInstance              *instance,
      |                                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
videoadjust.c:199:27: warning: initialization of ‘GstVideoBalance *’ {aka ‘struct _GstVideoBalance *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  199 |   GstVideoBalance *self = GST_VIDEO_BALANCE(g_type_instance_get_private(G_OBJECT(trans), gst_video_balance_get_type()));
      |                           ^~~~~~~~~~~~~~~~~
videoadjust.c:209:70: error: ‘GstPad’ {aka ‘struct _GstPad’} has no member named ‘template_caps’
  209 |   if (!gst_video_frame_map(&frame, GST_BASE_TRANSFORM_SINK_PAD(trans)->template_caps, buffer, GST_MAP_READWRITE)) {
      |                                                                      ^~
videoadjust.c: In function ‘plugin_init’:
videoadjust.c:315:70: error: ‘GST_TYPE_VIDEO_BALANCE’ undeclared (first use in this function); did you mean ‘GST_TYPE_COLOR_BALANCE’?
  315 |   return gst_element_register(plugin, "videobalance", GST_RANK_NONE, GST_TYPE_VIDEO_BALANCE);
      |                                                                      ^~~~~~~~~~~~~~~~~~~~~~
      |                                                                      GST_TYPE_COLOR_BALANCE
videoadjust.c:315:70: note: each undeclared identifier is reported only once for each function it appears in
In file included from /usr/include/gstreamer-1.0/gst/gstelementfactory.h:38,
                 from /usr/include/gstreamer-1.0/gst/gstelement.h:226,
                 from /usr/include/gstreamer-1.0/gst/gstbin.h:27,
                 from /usr/include/gstreamer-1.0/gst/gst.h:35,
                 from videoadjust.c:1:
videoadjust.c: At top level:
/usr/include/gstreamer-1.0/gst/gstplugin.h:268:3: error: ‘PACKAGE’ undeclared here (not in a function)
  268 |   PACKAGE, \
      |   ^~~~~~~
videoadjust.c:319:1: note: in expansion of macro ‘GST_PLUGIN_DEFINE’
  319 | GST_PLUGIN_DEFINE(GST_VERSION_MAJOR,
      | ^~~~~~~~~~~~~~~~~
